<?xml version="1.0"?>
<package format="2">
  <name>goalkeeper</name>
  <version>0.0.0</version>
  <description>The goalkeeper package</description>
  <maintainer email="wildan@todo.todo">wildan</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>multirole_func</build_depend>
  <build_depend>motion</build_depend>
  <build_depend>utils</build_depend>

  <export>


  </export>
</package>
